<resources>
    <string name="app_name">ReversiAmovTP</string>
    <string name="reversi">Reversi</string>
    <string name="play">Play</string>
    <string name="exit">Exit</string>
    <string name="twoPlayersOff">2 players (offline)</string>
    <string name="twoPlayersOn">2 players (online)</string>
    <string name="threePlayersOn">3 players (online)</string>
    <string name="btnLogin">Sign In</string>
    <string name="etLoginHintPassword">Password</string>
    <string name="etLoginHintEmail">Email</string>
    <string name="tvRegisterLogin">Sign Up</string>
    <string name="tv_forgot_password_login">Forgot Password?</string>
    <string name="tv_don_t_have_an_account_login">Don\'t have an account?</string>
    <string name="tv_already_have_an_account_signup">Already have an account?</string>
    <string name="et_username_register">Username</string>
    <string name="et_confirm_password_reg">Confirm Password</string>
    <string name="logo">logo</string>
    <string name="rules">Rules</string>
    <string name="game_modes">Game Modes</string>
    <string name="mode_2_players_online">2 Players Online Mode</string>
    <string name="mode_2_players_offline">2 Players Offline Mode</string>
    <string name="mode_3_players_online">3 Players Online Mode</string>
    <string name="special_plays">Special Plays</string>
    <string name="bomb_piece">Bomb piece</string>
    <string name="piece_exchange">Piece exchange</string>
    <string name="rulesText">\tReversi is a board game between two players, in which the objective is to have the greatest number of pieces on the board. Therefore, each player must place a piece in a cell so that, at least in one of the directions (horizontal, vertical, or diagonal), there is a sequence that includes one or more opponent\'s pieces and, on the opposite side, a player\'s piece.</string>
    <string name="mode_2_Offline_text">This game mode is played by two players on a single device on an 8 x 8 board and including the special pieces.</string>
    <string name="mode_2_Online_text">This game mode is played by two players on two different devices on an 8 x 8 board and including the special pieces.</string>
    <string name="mode_3_Online_text">This game mode is played by three players on three different devices, on a 10 x 10 board and including the special pieces.</string>
    <string name="modes_text">At the beginning of the game, the player can choose the game mode he wants to play. Thus, you will have the following game modes as possible choices:</string>
    <string name="special_pieces_text">This game, in addition to the rules already described, also has some special moves, to make the game more competitive.</string>
    <string name="bomb_piece_text">The insertion of a bomb tile can only be performed once by each player during the game and it must be placed on a player\'s tile. When applying this tile, all others within a radius of 1 square are eliminated.</string>
    <string name="piece_exchange_text">Through this special move, the player can exchange two pieces for one of the opponents. This exchange is made once by each player and, when making the exchange, the two pieces that the user wants to exchange are initially marked, followed by the opponent\'s piece.</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="menu">Menu</string>
    <string name="general">General</string>
    <string name="my_account">My Account</string>
    <string name="profile">Profile</string>
    <string name="topscore">TopScore</string>
    <string name="logout">Logout</string>
    <string name="edit_password">Edit Password</string>
    <string name="change_password">Change Password</string>
    <string name="change_email">Change Email</string>
    <string name="edit_email">Edit Email</string>
    <string name="edit_picture">Edit Picture</string>
    <string name="credits">Credits</string>
    <string name="_2021_2022">2021/2022</string>
    <string name="andre_lima_domingues_2019127839">André Lima Domingues - 2019127839</string>
    <string name="diogo_dias_almeida_2019126638">Diogo Dias Almeida - 2019126638</string>
    <string name="joao_pedro_borges_pinto_2019140339">João Pedro Borges Pinto - 2019140339</string>
    <string name="camerax">CameraX</string>
    <string name="firebase">Firebase</string>
    <string name="circular_image">Circular image</string>
    <string name="gson">Gson</string>
    <string name="justified_text">Justified text</string>
    <string name="creditos">Credits</string>
    <string name="unidade_curricular">Curricular Unit</string>
    <string name="ano_letivo">School year</string>
    <string name="programadores">Programmers</string>
    <string name="dependencias">Dependencies</string>
    <string name="arquiteturas_moveis">Mobile Architectures</string>
    <string name="bombPieceSelect">You can only select your piece color.</string>
    <string name="exchangeSelectTwice">You can\'t choose the same piece twice.</string>
    <string name="exchangeWrongPiece">Wrong Piece selected.</string>
    <string name="exchangeBoardError">You can\'t choose a position outside the board.</string>
    <string name="exchangeNoBoardPieces">don\'t got enough pieces!</string>
    <string name="exchangeNoAvailablePieces">has no available exchange pieces!</string>
    <string name="winner">win the game.</string>
    <string name="draw">Draw</string>
    <string name="checkBoard">Check Board</string>
    <string name="backToMenu">Back to menu</string>
    <string name="pass">Pass</string>
    <string name="noAvailablePlays">No available plays…</string>
    <string name="noAvailablePlaysName">has no available plays…</string>
    <string name="anonymous">Anonymous</string>
    <string name="serverIp">Server IP address</string>
    <string name="waitingForClient">Waiting for client…</string>
    <string name="cancel">Cancel</string>
    <string name="adressNotRecognized">Address not recognized</string>
    <string name="connect">Connect</string>
    <string name="clientMode">Client Mode</string>
    <string name="ok" translatable="false">Ok</string>
    <string name="emailSent">An email was sent to</string>
    <string name="resetPassword">reset the password.</string>
    <string name="serverMode">Server Mode</string>
    <string name="connectionType">Choose the connection type…</string>
    <string name="checkWifi">Check the wifi connection…</string>
    <string name="permissionsNotGranted">Permissions not granted.</string>
    <string name="emptyFields">Fields must not be empty</string>
    <string name="passwordNoMatch">Passwords don\'t match</string>
    <string name="usernameLetters">Username must have at least 3 letters</string>
    <string name="lostConnection">Another player\'s connection went down.</string>
    <string name="modo">Mode</string>
    <string name="jogadores">Players</string>
    <string name="resultado">Scores</string>
    <string name="topscores">TopScores</string>
    <string name="activateBombPiece">Bomb piece activated</string>
    <string name="activateExchangePiece">Exchange piece activated</string>
    <string name="bombPieceNoAvailablePieces">has no available bomb pieces.</string>
    <string name="capture_photo">Capture Photo</string>
</resources>