<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.RegisterActivity"
    android:background="@drawable/custom_background">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="5dp"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_gravity="center_horizontal"
            android:layout_margin="10dp"
            android:textStyle="bold"
            android:textSize="65sp"
            android:textColor="@color/branco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/reversi"
            android:textAlignment="center"/>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/logo_reversi" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        android:layout_marginTop="90dp">

        <EditText
            android:id="@+id/etRegisterUsername"
            android:hint="@string/et_username_register"
            style="@style/EditTextLogin"
            android:drawableStart="@drawable/ic_person_reg"
            android:inputType="text" />

        <EditText
            android:id="@+id/etRegisterEmail"
            android:hint="@string/etLoginHintEmail"
            style="@style/EditTextLogin"
            android:drawableStart="@android:drawable/ic_dialog_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etRegisterPassword"
            style="@style/EditTextLogin"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:hint="@string/etLoginHintPassword"
            android:inputType="textPassword"
            />

        <EditText
            android:id="@+id/etRegisterConfirmPassword"
            style="@style/EditTextLogin"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:hint="@string/et_confirm_password_reg"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btnSignUp"
            style="@style/ButtonMenu"
            android:layout_height="50dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="85dp"
            android:text="@string/tvRegisterLogin" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:id="@+id/tvLoginRegister"
        android:layout_gravity="bottom">

        <TextView
            android:layout_gravity="center_horizontal"

            android:textSize="20sp"
            android:textColor="@color/branco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/tv_already_have_an_account_signup"
            android:textAlignment="center"/>

        <TextView
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/azul_marinho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btnLogin"
            android:textAlignment="center"/>
    </LinearLayout>

</FrameLayout>