<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LoginActivity"
    android:background="@drawable/custom_background">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp">

        <TextView
            style="@style/titleReversi"
            android:text="@string/reversi"
            />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:src="@drawable/logo_reversi" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:orientation="vertical"
        android:paddingVertical="20dp"
        android:layout_marginTop="90dp">

        <EditText
            android:id="@+id/etLoginEmail"
            android:hint="@string/etLoginHintEmail"
            style="@style/EditTextLogin"
            android:drawableStart="@android:drawable/ic_dialog_email"
            android:inputType="textEmailAddress" />

        <EditText
            android:id="@+id/etLoginPassword"
            style="@style/EditTextLogin"
            android:drawableStart="@android:drawable/ic_lock_idle_lock"
            android:hint="@string/etLoginHintPassword"
            android:inputType="textPassword"
            />

        <Button
            android:id="@+id/btnLogin"
            style="@style/ButtonMenu"
            android:layout_height="50dp"
            android:paddingLeft="0dp"
            android:paddingRight="0dp"
            android:layout_marginBottom="10dp"
            android:layout_marginHorizontal="85dp"
            android:text="@string/btnLogin" />

        <TextView
            android:id="@+id/tvLoginForgotPass"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/azul_marinho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_forgot_password_login"
            android:textAlignment="center"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center"
        android:id="@+id/tvLoginRegister"
        android:layout_gravity="bottom">

        <TextView
            android:layout_gravity="center_horizontal"

            android:textSize="20sp"
            android:textColor="@color/branco"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:text="@string/tv_don_t_have_an_account_login"
            android:textAlignment="center"/>

        <TextView
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="@color/azul_marinho"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tvRegisterLogin"
            android:textAlignment="center"/>
    </LinearLayout>

</FrameLayout>