<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/profileLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    android:orientation="vertical"
    tools:context=".fragments.ProfileFragment">

    <TextView
        android:id="@+id/profileTitle"
        style="@style/titleReversi"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingTop="32dp"
        android:text="@string/profile" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/rounded_corners"
        android:backgroundTint="@color/ar_puro"
        android:orientation="vertical"
        android:paddingStart="18dp"
        android:paddingTop="22dp"
        android:paddingEnd="18dp"
        android:paddingBottom="22dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/profilePic"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:src="@mipmap/ic_launcher_round"
                app:civ_border_color="@color/azul_marinho"
                app:civ_border_width="2dp" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnEditPicture"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/rounded_corners"
                    android:ellipsize="end"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="@string/edit_picture"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/profileUsername"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:paddingTop="13dp"
                    android:text=""
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textSize="24sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:layout_marginTop="30dp"
            style="@style/profileText"
            android:text="@string/change_password" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                style="@style/profileItems"
                android:text="************"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/btnEditPassword"
                style="@style/profileButtonPortrait"
                android:text="@string/edit_password"
                android:layout_weight="1.5"/>

        </LinearLayout>
    </LinearLayout>
</LinearLayout>